Fix my picture's bottom margin on mobile, no longer change site location in navbar.

--- a/css/general.css
+++ b/css/general.css
@@ -171,6 +171,7 @@ code {
 	height: 50px;
 	margin-top: 7px;
 	margin-left: 7px;
+	margin-bottom: 8px;
 	padding: 0px;
 	border-radius: 10px;
 }
@@ -185,6 +186,7 @@ code {
 	margin: 0px auto 0px 0px;
 	padding: 0px;
 	padding-left: 5px;
+	padding-right: 20px;
 }
 
 #name a:link {
